# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "ai_mcqueen"
authors = ["Guglielmo Boi", "Davide Andreolli", "Chiara Sabaini", "Aris Tomaselli"]
version = "1.0.0"
edition = "2021"
exclude = [".*"]

[dependencies]
ui_lib = { git = "ssh://git@github.com/rust-eze-robotics/ui_lib.git", branch = "main" }
robotics_lib = {version = "0.1.21", registry = "kellnr"}